InsuranceOrg/force-app/main/default/objects/vbtapp__TrialforceSetupScript__mdt/vbtapp__TrialforceSetupScript__mdt.object-meta.xml
<CustomObject>
    <label>Trialforce Setup Script</label>
    <pluralLabel>Trialforce Setup Scripts</pluralLabel>
</CustomObject>