InsuranceOrg/force-app/main/default/objects/vbtapp__TrialforceSetupScript__mdt/fields/vbtapp__Enabled__c.field-meta.xml
<CustomField>
    <fullName>vbtapp__Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>