InsuranceOrg/force-app/main/default/objects/vbtapp__TrialforceSetupScript__mdt/fields/vbtapp__Order__c.field-meta.xml
<CustomField>
    <fullName>vbtapp__Order__c</fullName>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>