InsuranceOrg/force-app/main/default/objects/vbtapp__TrialforceSetupScript__mdt/fields/vbtapp__Path__c.field-meta.xml
<CustomField>
    <fullName>vbtapp__Path__c</fullName>
    <label>Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>