InsuranceOrg/force-app/main/default/objects/vbtapp__TrialforceSetupScript__mdt/fields/vbtapp__Type__c.field-meta.xml
<CustomField>
    <fullName>vbtapp__Type__c</fullName>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>